fixup! fix(Calendar grid): transparency overlapping issues

--- a/css/fullcalendar.scss
+++ b/css/fullcalendar.scss
@@ -283,6 +283,6 @@
 }
 
 .fc-timegrid-event-harness, .fc-timegrid-event {
-	margin-bottom: 1px;
+	border-radius: 3px;
 	overflow-y: hidden;
 }
